--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -13,6 +13,14 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+input::-webkit-inner-spin-button {
+    display: none;
+}
+
+.row{
+    margin-bottom: 30px;
+}
+
 a {
     color: #00C0DD;
     border-bottom: solid 1px  #00C0DD;
@@ -57,9 +65,11 @@ h1.mobile {
 }
 
 
+.form-inline{
+    margin-bottom: 30px;
+ }
 
-
-h2, h3 {
+h2, h3, h4, h5 {
     font-family: 'Roboto', sans-serif;
 }
 h2 small {
@@ -67,7 +77,9 @@ h2 small {
 }
 
 h3 {
-    margin-top: 26px;
+    border-bottom: solid 1px;
+    line-height: 1.7em;
+    margin: .7em 0;
 }
 
 p{
@@ -104,6 +116,12 @@ p{
     background: transparent;
     border: none;
 }
+.navbar-nav {
+    margin: inherit;
+}
+.navbar-nav > li {
+    margin: 7px;
+}
 .navbar-default .navbar-nav > li > a{
     color: inherit;
     padding-top: 10px;
@@ -114,14 +132,6 @@ p{
     color: white;
     background: rgba(31, 56, 63, 0.8);
 }
-
-.navbar-nav {
-    margin: inherit;
-}
-.navbar-nav > li {
-    margin: 7px;
-}
-
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
@@ -144,8 +154,6 @@ p{
     border: 1px solid rgba(0, 0, 0, 0.15);
     white-space: pre;
 }
-
-
 .dropdown-menu > li > a {
     display: block;
     padding: 3px 20px;
@@ -170,29 +178,60 @@ p{
     border-radius: 0;
 }
 
-.glyphicon{
-    margin: 2px 10px 2px 0;
-}
-
-
 /*Multiply Game*/
-.strategyPanel{
-    background: rgba(0, 0, 0, 0.25);
+.factorBlock{
+    height: 36px;
+    font-size: 28px;
+}
+.complete {
+    font-size: 3em;
+}
+
+.progress{
+    height: 6px;
+    background: inherit;
+}
+.progress-bar-info{
+    background-color:#00B4CC
+}
+
+
+.coin{
+    background: inherit;
+    width: .5em;
+    height: .5em;
+    margin-right: .5em;
+    margin-bottom: .125em;
+    display: inline-block;
+}
+td > button {
+    border: none;
     border-radius: 5px;
+    padding: 7px;
 }
-.strategyTableWrap{
-    padding: 20px;
-}
+
 .term{
     text-align: center;
+    background: inherit;
+    color: white;
+    border: dashed 1px white;
+    padding: 10px;
+    font-size: 24px;
+    height: inherit;
 }
 .form-group {
     margin-right: 10px;
 }
+.form-control:focus {
+    border-color: #00B4CC;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 180, 204, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 180, 204, 0.6);
+}
+
 .gridbox{
     position: relative;
-    height: 100px;
-  }
+ }
 .gridpanel{
      position: absolute;
      bottom: 0;
@@ -203,40 +242,43 @@ p{
      height: 45px;
      width: 45px;
     }
+
 .gridCell{
     position: absolute;
     width: 20px;
     height: 20px;
-    background-color: #838383;
-    border-left: solid 1px #333333;
-    border-top: solid 1px #333333;
-    box-shadow: 1px 1px 3px #3d3d3d;
-
+    background: rgba(31, 56, 63, 0.8);
+    border-left: solid 1px #00B4CC;
+    border-top: solid 1px #00B4CC;
+    box-shadow: 1px 1px 1px #00B4CC;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     -ms-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
+.gridCell.activeCell{
+    border-left: solid 1px #444444;
+    border-top: solid 1px #444444;
+    box-shadow: 1px 1px 3px #444444;
+}
+
+.group0{background-color: #279FE5 }
+.group1{background-color: #2BBF8E }
+.group2{background-color: #FFF549 }
+.group3{background-color: #FCA820 }
+.group4{background-color: #F96852
+}
+
+
 .symbol{
     vertical-align: middle;
     text-align: center;
-    font-size: 20px;
-
+    font-size: 28px;
 }
-.has-error > input{
-    background-color: #ffd8de;
-}
-
-/*
- The animate-enter prefix is the event name that you
- have provided within the ngAnimate attribute.
-*/
-
 .btn-group{
     margin-bottom: 7px;
 }
-
 .shade{
     color: #00B4CC;
     text-align: right;
@@ -244,6 +286,7 @@ p{
 }
 
 
+/*____Loading Spinner*/
 .wrapperloading {
     position: absolute;
     height: 200px;
@@ -252,13 +295,10 @@ p{
     margin-top: -100px;
     left: 50%;
     margin-left: -100px;
-
     background: rgba(31, 56, 63, 0.8);
     border: solid 1px #00B4CC;
     border-radius: 0;
-
 }
-
 .wrapperloading .loading_up {
     position: absolute;
     height: 200px;
@@ -269,15 +309,12 @@ p{
     border-left-color: #005F6B;
     border-right-color: #005F6B;
     border-bottom-color: #00B4CC;
-
     background: rgba(31, 56, 63, 0.8);
-
     -webkit-animation: rotation 3s linear infinite;
     -moz-animation: rotation 3s linear infinite;
     -o-animation: rotation 3s linear infinite;
     animation: rotation 3s linear infinite;
 }
-
 .wrapperloading .loading_down {
     position: absolute;
     height: 100px;
@@ -297,8 +334,6 @@ p{
     -o-animation: rotation 1s linear infinite;
     animation: rotation 1s linear infinite;
 }
-
-
 @-webkit-keyframes rotation {
     0% {
         -webkit-transform: rotate(0deg);
@@ -307,7 +342,6 @@ p{
         -o-transform: rotate(0deg);
         transform: rotate(0deg);
     }
-
     50% {
         -webkit-transform: rotate(180deg);
         -moz-transform: rotate(180deg);
@@ -315,7 +349,6 @@ p{
         -o-transform: rotate(180deg);
         transform: rotate(180deg);
     }
-
     100% {
         -webkit-transform: rotate(360deg);
         -moz-transform: rotate(360deg);
@@ -324,7 +357,6 @@ p{
         transform: rotate(360deg);
     }
 }
-
 @-moz-keyframes rotation {
     0% {
         -webkit-transform: rotate(0deg);
@@ -333,7 +365,6 @@ p{
         -o-transform: rotate(0deg);
         transform: rotate(0deg);
     }
-
     50% {
         -webkit-transform: rotate(180deg);
         -moz-transform: rotate(180deg);
@@ -341,7 +372,6 @@ p{
         -o-transform: rotate(180deg);
         transform: rotate(180deg);
     }
-
     100% {
         -webkit-transform: rotate(360deg);
         -moz-transform: rotate(360deg);
@@ -350,7 +380,6 @@ p{
         transform: rotate(360deg);
     }
 }
-
 @-o-keyframes rotation {
     0% {
         -webkit-transform: rotate(0deg);
@@ -359,7 +388,6 @@ p{
         -o-transform: rotate(0deg);
         transform: rotate(0deg);
     }
-
     50% {
         -webkit-transform: rotate(180deg);
         -moz-transform: rotate(180deg);
@@ -367,7 +395,6 @@ p{
         -o-transform: rotate(180deg);
         transform: rotate(180deg);
     }
-
     100% {
         -webkit-transform: rotate(360deg);
         -moz-transform: rotate(360deg);
@@ -376,7 +403,6 @@ p{
         transform: rotate(360deg);
     }
 }
-
 @keyframes rotation {
     0% {
         -webkit-transform: rotate(0deg);
@@ -385,7 +411,6 @@ p{
         -o-transform: rotate(0deg);
         transform: rotate(0deg);
     }
-
     50% {
         -webkit-transform: rotate(180deg);
         -moz-transform: rotate(180deg);
@@ -393,7 +418,6 @@ p{
         -o-transform: rotate(180deg);
         transform: rotate(180deg);
     }
-
     100% {
         -webkit-transform: rotate(360deg);
         -moz-transform: rotate(360deg);
@@ -402,3 +426,4 @@ p{
         transform: rotate(360deg);
     }
 }
+/*____Loading Spinner*/
