--- a/views/partials/demos/Grid.jade
+++ b/views/partials/demos/Grid.jade
@@ -1,64 +1,58 @@
-h2 Multiply thing
-.panel
-    h3 grid
-    .strategyPanel
+h2 Multiply game
 
-        form(name="termForm", novalidate).form-inline.text-center.strategyTableWrap
-            .form-group
-                .symbol dimensions:
-
-            .form-group(ng-class=" {'has-error': termForm.columnCount.$invalid} ")
-                label.sr-only(for="columnCount") 1st term
-                input.form-control.term(name="columnCount", type="number", placeholder="y", ng-model="columncount", required, min="1", max="20")
-
-            .form-group
-                .symbol &times;
-
-            .form-group(ng-class=" {'has-error': termForm.rowcount.$invalid} ")
-                label.sr-only(for="rowcount") 2nd term
-                input.form-control.term(name="rowcount", type="number", placeholder="x", ng-model="rowcount", required, min="1", max="20")
-            .form-group
-                button.btn.btn-success(ng-click="buildGrid()", ng-disabled="termForm.$invalid") draw grid
-
-        .text-center(ng-show="termForm.$invalid")
-            p.text-danger Invalid dimensions. Select number 1 - 20
-
-        div.gridbox(ng-style="gridBoxSize")
-            .gridpanel(ng-style="gridPanelSize")
-                .gridCell(ng-repeat="cell in grid", ng-style="grid[$index].style")
+form(name="termForm", rc-submit="buildGrid()").form-inline
+    .form-group(ng-class=" {'has-error': termForm.columnCount.$invalid} ")
+        label.sr-only(for="x") 1st term
+        input.form-control.term(name="x", type="number", placeholder="x", ng-model="x", required, min="1", max="20")
+    .form-group
+        .symbol &times;
+    .form-group(ng-class=" {'has-error': termForm.rowcount.$invalid} ")
+        label.sr-only(for="y") 2nd term
+        input.form-control.term(name="y", type="number", placeholder="y", ng-model="y", required, min="1", max="20")
+    .form-group
+        button.btn.btn-success(type="submit") start!
 
 
-    h3 strategy
-    .strategyPanel
-        .strategyTableWrap
-            form(name="factorForm", novalidate).form-inline.text-center
+
+.panel(ng-show="grid")
+
+    .row
+        div.col-sm-6
+            h3 grid
+            div.progress.progress-striped(ng-show="grid")
+                div.progress-bar(ng-repeat="factor in strategy.factors", role='progressbar', aria-valuenow='{{factor.percentage}}', aria-valuemin='0', aria-valuemax='100', style='width: {{factor.percentage}}%;', ng-class="factor.colorGroup")
+                    div.sr-only progress: {{factor.percentage}}%
+
+            div.gridbox(ng-style="gridBoxSize")
+                .gridpanel(ng-style="gridPanelSize")
+                    .gridCell(ng-repeat="cell in grid", ng-style="cell.style", ng-class="cell.group")
+
+        div.col-sm-6
+            h3 factors
+            ol.list-unstyled
+                li.factorBlock(ng-repeat="factor in strategy.factors")
+                    span.coin(ng-class="factor.colorGroup")
+                    | {{factor.termOne}} &times; {{factor.termTwo}} = {{factor.product}}
+
+            form(name="factorForm", rc-submit="addFactor()", ng-hide="complete").form-inline.text-center
                 .form-group(ng-class=" {'has-error': factorForm.termOneInput.$invalid} ")
                     label.sr-only(for="termOneInput") first term
-                    input.form-control.term(name="termOneInput", type="number", placeholder="first term", ng-model="factorForm.termOneInput", required, min="0", max="400")
+                    input.form-control.term(name="termOneInput", type="number", placeholder="0", ng-model="factorForm.termOneInput",required, min="1", max="400")
                 .form-group
                     .symbol &times;
                 .form-group(ng-class=" {'has-error': factorForm.termTwoInput.$invalid} ")
                     label.sr-only(for="termTwoInput") second term
-                    input.form-control.term(name="termTwoInput", type="number", placeholder="second term", ng-model="factorForm.termTwoInput", required, min="0", max="400")
+                    input.form-control.term(name="termTwoInput", type="number", placeholder="0", ng-model="factorForm.termTwoInput", required, min="1", max="400")
                 .form-group
                     .symbol =
                 .form-group(ng-class=" {'has-error': factorForm.productInput.$invalid} ")
                     label.sr-only(for="productInput") product
-                    input.form-control.term(name="productInput", type="number", placeholder="product", ng-model="factorForm.productInput", required, min="0", max="400")
+                    input.form-control.term(name="productInput", type="number", placeholder="0", ng-model="factorForm.productInput", required, min="1", max="400")
                 .form-group
-                    button.btn.btn-success(ng-click="addFactor()", ng-disabled="factorForm.$invalid") Save
-                .form-group
-                    button.btn.btn-danger(ng-click="clearForm()") Clear
+                    button.btn.headerButton(type='submit', ng-disabled="factorForm.$invalid")
+                        .glyphicon.glyphicon-check
 
-        .strategyTableWrap
-            table.table.table-responsive
-                thead
-                    th Strategies
-                tbody.text-center
-                    tr
-                        td(ng-bind-html-unsafe="factorialString")
+                .alert(ng-show="wrongAnswer") Wrong Answer!
+                .alert.term(ng-show="tooMany") Too Many!
 
-
-
-
-
+            h2(ng-show="complete")  &#x2714; Complete!
