--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ html(ng-app="mattLovan")
         title Matt Lovan
         link(rel='stylesheet', href='/css/bootstrap.css')
         link(rel='stylesheet', href='/css/app2.css')
+        link(rel='stylesheet', href='/css/slider.css')
         link(rel='stylesheet', href='/css/3dLogo.css')
         link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Roboto:300', rel='stylesheet', type='text/css')
 
@@ -16,12 +17,13 @@ html(ng-app="mattLovan")
         include partials/header/Header
 
         .container
-            div(ng-view)
+            div.mainView(ng-view)
 
         script(src='js/lib/Angular1.2.js')
         script(src='js/lib/ngRoute.js')
         script(src='js/lib/ngAnimate.js')
         script(src='js/lib/AngularUI.js')
+        script(src='js/lib/uiSlider.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
         script(src='js/directives.js')
