--- a/views/partials/demos/maps.jade
+++ b/views/partials/demos/maps.jade
@@ -1,7 +1,8 @@
 
-.panel.col-md-6
+.panel.col-md-8
   gm-map.map(gm-map-id='\'myMap\'', gm-center="center", gm-map-options="options.map")
 
-.col-md-6
+.col-md-4
   h2 Boise Food Truck Tweets
+  slider(floor="0", ceiling="30", step="1", precision="1")
   h4 Coming soon...
